--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
+        "irazasyed/telegram-bot-sdk": "*",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "predis/predis": "^1.1"
