--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "irazasyed/telegram-bot-sdk": "*",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "pusher/pusher-php-server": "^7.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
