--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "irazasyed/telegram-bot-sdk": "*",
         "laravel/framework": "^7.29",
+        "laravel/sanctum": "^2.13",
         "laravel/tinker": "^2.5",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^7.0"
