--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "pusher/pusher-php-server": "^7.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "facade/ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4",
