--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 /node_modules
 /public/hot
 /public/storage
-/public/images
 /storage/*.key
 /vendor
 .env
@@ -11,3 +10,8 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+docker-compose.yml
+/docker
+/docker-dev
+/mysql
+/dump
